fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,12 @@
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* border: 1px solid red; */
 }
 
-body{
-  overflow-x: hidden !important;
-}
+/*body{*/
+/*  overflow-x: hidden !important;*/
+/*  */
+/*}*/
 
 /* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
